@@ -16,6 +16,14 @@ does not.</p>
 
 	header( 'Last-Modified: ' . gmdate( 'D, d M Y H:i:s', $stat['mtime'] ) . ' GMT' );
 
+	// Cancel output buffering and gzipping if set
+	while( $status = ob_get_status() ) {
+		ob_end_clean();
+		if( $status['name'] == 'ob_gzhandler' ) {
+			header( 'Content-Encoding: identity' );
+		}
+	}
+	
 	if ( !empty( $_SERVER['HTTP_IF_MODIFIED_SINCE'] ) ) {
 		$modsince = preg_replace( '/;.*$/', '', $_SERVER['HTTP_IF_MODIFIED_SINCE'] );
 		$sinceTime = strtotime( $modsince );
